rearranged some swing classes, added some pso classes, added Simulation Manager